--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ output:
   </div>
   <div class="col-md-9">
 
-My nickname is Juro (pronounced like the money '€'), and I am a 4th year Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. I have been fortunate to collaborate with researchers across several institutions, including [prof. Bin Yu](https://www.stat.berkeley.edu/~yugroup/index.html)
+My nickname is Juro (pronounced like the money '€'), and I am a Ph.D. student under the supervision of [Prof. Valérie Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) at the [University of Lausanne](https://www.unil.ch/hec/en/home.html), Switzerland. I have been fortunate to collaborate with researchers across several institutions, including [prof. Bin Yu](https://www.stat.berkeley.edu/~yugroup/index.html)
  at UC Berkeley where I spent half a year as a visiting researcher in 2024, colleagues at Stanford or collaborators at the University of Geneva.
 
 
@@ -36,12 +36,11 @@ I was born in Slovakia and did my bachelor's and master's in pure mathematics at
 
 
 # Latest news
-- Our paper was (conditinally) accepted in [Journal of Machine Learning Research](https://arxiv.org/abs/2303.15376), a leading journal in modern data science!
-- Our paper was recently published in [Biometrika](https://academic.oup.com/biomet/advance-article/doi/10.1093/biomet/asaf042/8157876), the oldest  journal in statistics!
+- (Oct 2025) Our [paper](https://arxiv.org/abs/2303.15376) was (conditinally) accepted in [Journal of Machine Learning Research](https://arxiv.org/abs/2303.15376), a leading journal in modern data science!
+- (Jun 2025) Our [paper](https://academic.oup.com/biomet/advance-article/doi/10.1093/biomet/asaf042/8157876) was recently published in [Biometrika](https://academic.oup.com/biomet/advance-article/doi/10.1093/biomet/asaf042/8157876), the oldest  journal in statistics!
 - In <del>August and September</del> December and January, I will be on a research visit at Osaka University in Japan, hosted by [Shohei Shimizu](https://www.shimizulab.org/lab). If you have recommendations for Japan or would like to meet up while I’m there, feel free to reach out!
-- After returning from California, I injured my lower back playing ultimate frisbee and later had a bike accident (February 2025). I won’t be able to travel for up to a year but am very happy to collaborate remotely!
+- (Feb 2025) After returning from California, I injured my lower back playing ultimate frisbee and later had a bike accident. I won’t be able to travel for up to a year but am very happy to collaborate remotely!
 
 <small>Last page update: 27.10.2025.</small>
-
 
 
