--- a/about.Rmd
+++ b/about.Rmd
@@ -53,7 +53,7 @@ output:
 <br>
 <hr>
 
-1. J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) (2025, Journal of Machine Learning Research (conditionally accepted))
+1. J. Bodik and [V. Chavez-Demoulin](https://wp.unil.ch/hecimpact/people/valerie-chavez-demoulin/) (2025, Journal of Machine Learning Research (to appear))
 <br>
 [Identifiability of causal graphs under nonadditive conditionally parametric causal models](https://arxiv.org/abs/2303.15376)
 <br>
@@ -343,5 +343,6 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
     }
   });
 </script>
+
 
 
