--- a/about.Rmd
+++ b/about.Rmd
@@ -127,6 +127,8 @@ It has been shown that the causal graph is identifiable under different models, 
 
 <font size="12">Selected conferences and talks</font>
 
+- [Data science lab seminar](https://www.shimizulab.org/lab) (*Invited speaker* at a Data science lab at University of Osaka in **Osaka**, Japan, 16.12.2025)
+
 - [CHUV BDSC seminar](https://datascience.stanford.edu/datadrivenseminar) (*Invited speaker* at a Clinical Data Science Group seminar at CHUV University Hospital in **Lausanne**, Switzerland, 29.9.2025)
 
 - [Data driven seminar](https://datascience.stanford.edu/datadrivenseminar) (Speaker at a weekly Data driven seminar at  **Stanford**, California, 7.11.2024)
@@ -345,6 +347,7 @@ Keywords: Mathematical statistics; Causal inference; Statistical inference; Prob
     }
   });
 </script>
+
 
 
 
